chore(aifs): clean up

--- a/AIF-Schuller/main-biblatex.tex
+++ b/AIF-Schuller/main-biblatex.tex
@@ -108,8 +108,7 @@
   ]{biblatex}
 
 %% Declare bibliography sources (one \addbibresource command per source)
-\addbibresource{software.bib}
-\addbibresource{sample-base.bib}
+\addbibresource{main-base.bib}
 
 %%
 %% end of the preamble, start of the body of the document source.
