chore(py): add comment

--- a/PythonProgramming/InterestBasic_Yuan.ipynb
+++ b/PythonProgramming/InterestBasic_Yuan.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# InterestBasic\n",
     "\n",
-    "Author: Sha Yuan (2018), Yuteng Huang (2025)\n",
+    "Author: Sha Yuan (2018 originated), Yuteng Huang (2025 edited)\n",
+    "\n",
+    "**Note: This version cannot produce a correct result due to the bad data processing.** I tried to fix it, but the original code is too messy.\n",
     "\n",
     "## Preparation\n",
     "\n",
